charts/backend/test.ingress.yaml
# helm에 반영되는 인그레스는 아닙니다.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: backend
  name: test-ing
  annotations:
    kubernetes.io/ingress.class: alb #alb를 사용한다는 의미
    alb.ingress.kubernetes.io/target-type: instance #target이 ec2 인스턴스
    alb.ingress.kubernetes.io/scheme: internet-facing #외부에 노출
    external-dns.alpha.kubernetes.io/hostname: www.so1s.io
spec:
  rules:
     - host: www.so1s.io
       http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sungbin-dev # helm 내부 서비스 이름 참조
                port:
                  number: 80
